# vaxp-background

./: README.md  a.out  analyzer_2_liquid.c  meson.build  vaxp_canvas_opengl.c
include/: audio_analyzer.h  backend.h  desktop_config.h  layer_manager.h  video_wallpaper.h  wallpaper.h
protocol/: wlr-layer-shell-unstable-v1.xml
src/: audio_analyzer.c  backend_wayland.c  backend_x11.c  desktop_config.c  layer_manager.c  main.c  vaxp-setbg.c  video_wallpaper.c  wallpaper.c
